--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -2,16 +2,18 @@
 display: flex;
 align-items: center;
 justify-content: center;
-padding: 0 10px;
+padding:  10px;
 box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.299);
 -webkit-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.317);
 -moz-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.75);
 margin-bottom: 3em;
+
 }
 
 #logo{
-height: 150px;
-width: 150px;
+height: 100px;
+width: 100px;
+
 }
 
 #navbar-search-form{
@@ -42,6 +44,14 @@ background-color: transparent;
 border: none;
 font-size: 1.46em;
 margin-left: 3%;
+border-radius: 30px;
+padding: 10px;
+}
+
+#nav-signin-btn:hover {
+background-color: rgba(0, 0, 0, 0.094);
+
+transition: 300ms;
 }
 
 #nav-cart-btn{
