--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -11,8 +11,8 @@ margin-bottom: 3em;
 }
 
 #logo{
-height: 100px;
-width: 100px;
+height: 75px;
+width: 75px;
 
 }
 
@@ -22,14 +22,14 @@ display: flex;
 align-items: center;
 border-radius: 60px;
 margin-left: 3%;
-padding: 15px;
+padding: 5px 10px;
 }
 
 #seach-input-field{
-height: 4vh;
+height: 20px;
 width: 60vw;
 border: none;
-font-size: 1.4em;
+font-size: 1.1em;
 outline: none;
 }
 
@@ -42,15 +42,16 @@ border:none;
 #nav-signin-btn{
 background-color: transparent;
 border: none;
-font-size: 1.46em;
+font-size: 1.2em;
 margin-left: 3%;
 border-radius: 30px;
 padding: 10px;
+font-weight: 400;
 }
 
 #nav-signin-btn:hover {
 background-color: rgba(0, 0, 0, 0.094);
-
+cursor: pointer;
 transition: 300ms;
 }
 
@@ -59,4 +60,18 @@ background-color: transparent;
 border: none;
 font-size: 2.4em;
 margin-left: 3%;
+border-radius: 50%;
+height: 75px;
+width: 75px;
+text-align: center;
+display: flex;
+justify-content: center;
+align-items: center;
+/* padding: 10px; */
 }
+
+#nav-cart-btn:hover {
+    background-color: rgba(0, 0, 0, 0.094);
+    cursor: pointer;
+    transition: 300ms;
+    }
