--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -27,7 +27,7 @@ padding: 5px 10px;
 
 #seach-input-field{
 height: 20px;
-width: 60vw;
+width: 45vw;
 border: none;
 font-size: 1.1em;
 outline: none;
@@ -71,7 +71,12 @@ align-items: center;
 }
 
 #nav-cart-btn:hover {
-    background-color: rgba(0, 0, 0, 0.094);
-    cursor: pointer;
-    transition: 300ms;
-    }
+background-color: rgba(0, 0, 0, 0.094);
+cursor: pointer;
+transition: 300ms;
+}
+
+
+#nav-greeting {
+    margin-left: 3%; 
+}
