--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -37,6 +37,7 @@ outline: none;
 background-color: transparent;
 font-size: 2em;
 border:none;
+margin-left: 2em;
 }
 
 #nav-signin-btn{
@@ -59,7 +60,7 @@ transition: 300ms;
 background-color: transparent;
 border: none;
 font-size: 2.4em;
-margin-left: 3%;
+margin-right:10%;
 border-radius: 50%;
 height: 75px;
 width: 75px;
@@ -67,6 +68,7 @@ text-align: center;
 display: flex;
 justify-content: center;
 align-items: center;
+position: relative;
 /* padding: 10px; */
 }
 
@@ -78,5 +80,45 @@ transition: 300ms;
 
 
 #nav-greeting {
-    margin-left: 3%; 
+    font-size: 3vw;
+    border: none;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    margin-left: 0.5em;
+}
+
+#cart-icon{
+padding: 0;
+height: 20px;
+width: 20px;
+border: 1px soldi black;
+background-color: #FF5F3D;
+border-radius: 50%;
+display: flex;
+justify-content: center;
+align-items: center;
+position: absolute;
+top: 17px;
+right: 16px;
+
+}
+
+#cart-icon p {
+font-size: 18px;
+color: white;
+}
+
+.pop{
+    animation: pop 500ms;
+}
+
+@keyframes pop {
+ 0% {
+    font-size: 0;
+ }   
+
+ 100% {
+    font-size: 17px;
+ }
 }
