--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -122,3 +122,81 @@ color: white;
     font-size: 17px;
  }
 }
+
+
+#cart-pop-up{
+position: fixed;
+top: 0;
+left: 0;
+height: 100vh;
+width: 100vw;
+background-color: black;
+z-index: 20;
+display: flex;
+justify-content: center;
+align-items: center;
+}
+
+#cart-container{
+height:75%;
+width: 50%;
+background-color: white;
+display: flex;
+flex-direction: column;
+align-items: center;
+gap: 20px;
+border-radius: 10px;
+padding: 20px;
+overflow-y: scroll;
+}
+
+.cart-card{
+border: 1px solid black;
+border-radius: 10px;
+width: 80%;
+display: flex;
+align-items: center;
+padding: 20px;
+}
+
+
+.cart-card-info{
+margin-right: auto;
+max-width: 70%;
+overflow: hidden;
+max-height: 100px;
+font-size: 1.1sem;
+}
+
+.cart-card-btns {
+display: flex;
+gap: 10px;
+height: 35px;
+font-weight: 600;
+border-radius: 5px;
+}
+
+.cart-card-signin{
+color: white;
+background-color: #4cd137;
+border: none;
+font-weight: 600;
+border-radius: 5px;
+}
+
+
+.cart-card-contiune {
+color: white;
+background-color: #4cd137;
+border: none;
+font-weight: 600;
+border-radius: 5px;
+}
+
+.cart-card-remove {
+    color: white;
+    background-color: #EA2027;
+    border-radius: 5px;
+    border: none;
+    font-weight: 600;
+}
