--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -176,6 +176,7 @@ font-weight: 600;
 border-radius: 5px;
 }
 
+
 .cart-card-signin{
 color: white;
 background-color: #4cd137;
@@ -191,12 +192,13 @@ background-color: #4cd137;
 border: none;
 font-weight: 600;
 border-radius: 5px;
+min-height: 35px;
 }
 
 .cart-card-remove {
-    color: white;
-    background-color: #EA2027;
-    border-radius: 5px;
-    border: none;
-    font-weight: 600;
+color: white;
+background-color: #EA2027;
+border-radius: 5px;
+border: none;
+font-weight: 600;
 }
