--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -130,7 +130,7 @@ top: 0;
 left: 0;
 height: 100vh;
 width: 100vw;
-background-color: black;
+background-color: rgba(0, 0, 0, 0.412);
 z-index: 20;
 display: flex;
 justify-content: center;
@@ -138,7 +138,7 @@ align-items: center;
 }
 
 #cart-container{
-height:75%;
+min-height:35%;
 width: 50%;
 background-color: white;
 display: flex;
@@ -146,8 +146,11 @@ flex-direction: column;
 align-items: center;
 gap: 20px;
 border-radius: 10px;
-padding: 20px;
-overflow-y: scroll;
+padding: 60px 10px;
+color: black;
+}
+#cart-container h1 {
+    font-size: 3em;
 }
 
 .cart-card{
@@ -187,20 +190,35 @@ border-radius: 5px;
 
 
 .cart-card-contiune {
-color: white;
-background-color: #4cd137;
+background-color: transparent;
+font-size: 2em;
+color: #FF5F3D;
 border: none;
 font-weight: 600;
 border-radius: 5px;
 min-height: 35px;
 }
 
+.cart-card-contiune:hover {
+    transform: scale(1.1);
+    transition: 300ms;
+    cursor: pointer;
+}
+
 .cart-card-remove {
 color: white;
-background-color: #EA2027;
+background-color: transparent;
+color: black;
+font-size: 2em;
 border-radius: 5px;
 border: none;
 font-weight: 600;
+}
+
+.cart-card-remove:hover {
+    transform: scale(1.1);
+    transition: 300ms;
+    cursor: pointer;
 }
 
 #empty-cart{
