--- a/client/src/styles/SellerOnBoard.css
+++ b/client/src/styles/SellerOnBoard.css
@@ -100,11 +100,11 @@ font-size: 2.5em;
 
 
 #onboard-model {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     z-index: 10;
     background-color: rgba(0, 0, 0, 0.527);
     display: flex;
@@ -121,6 +121,7 @@ display: flex;
 flex-direction: column;
 align-items: center;
 justify-content: center;
+padding: 20px;
 }
 
 #terms-and-conditions{
