--- a/client/src/styles/SellerPage.css
+++ b/client/src/styles/SellerPage.css
@@ -28,6 +28,7 @@ font-size: 3em;
     color: white;
     background-color: rgba(3, 5, 77, 0.101);
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.337);
+    backdrop-filter: blur(20px);
     padding: 10px;
     border-radius: 10px;
 }
