--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -157,6 +157,7 @@ box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.527);
     align-items: center;
     gap: 10px;
     margin-bottom: 0em;
+    margin-top: -0.5em;
 }
 
 .cart-card{
