--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -172,7 +172,8 @@ padding: 20px;
 
 .cart-card-info{
 margin-right: auto;
-max-width: 70%;
+max-width: 60%;
+white-space: no-wrap;
 overflow: hidden;
 max-height: 100px;
 font-size: 1.1sem;
@@ -193,6 +194,8 @@ background-color: #4cd137;
 border: none;
 font-weight: 600;
 border-radius: 5px;
+padding: 5px 10px;
+max-width: 500px;
 }
 
 
