--- a/client/src/styles/BuyerPage.css
+++ b/client/src/styles/BuyerPage.css
@@ -217,11 +217,13 @@ margin-bottom: 4em;
         font-weight: 1000;
         font-size: 20px
     }
+
     #my-profile-btn:hover{
     transform: scale(1.1);
     background-color: rgba(0, 0, 0, 0.096);
     transition: 300ms;
     cursor: pointer;
+    }
     
 #add-listing-btn {
     /* position: absolute;
